# augmented-explained-transformer

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  SINGLE_SEED_RUNS.md  pyproject.toml
configs/: augmented.yaml  base.yaml  baseline.yaml
data/: README.md
models/: README.md
notebooks/: README.md
paper/: main.tex  references.bib
reports/: README.md
reports/attributions/augmented/: ig_samples.jsonl
reports/attributions/augmented_s13/: ig_samples.jsonl
reports/attributions/augmented_s1337/: ig_samples.jsonl
reports/attributions/augmented_s2024/: ig_samples.jsonl
reports/attributions/augmented_s21/: ig_samples.jsonl
reports/attributions/augmented_s42/: ig_samples.jsonl
reports/attributions/baseline_s13/: ig_samples.jsonl
reports/attributions/baseline_s1337/: ig_samples.jsonl
reports/attributions/baseline_s2024/: ig_samples.jsonl
reports/attributions/baseline_s21/: ig_samples.jsonl
reports/attributions/baseline_s42/: ig_samples.jsonl
reports/attributions/lstm_baseline/: lstm_ig_samples.jsonl
reports/figures/: ig_visualization.html
reports/metrics/: counterfactual_comparison.jsonl
scripts/: analyze_augmentation.py  augment_sst2.py  compare_counterfactuals.py  compare_sanity_randomization.py  download_sst2.py  ig_single_example.py  inspect_sst2.py  lime_single_example.py  plot_multiseed_aggregate.py  report_explainability.py  report_explainability_multiseed.py  run_full_multiseed.py  run_multiseed.py  visualize_ig.py
src/aet/: cli.py  config.py
tests/: test.py  test_config.py  test_filters.py  test_stats.py
(+186 files in other folders)
