[project]
name = "augmented-explained-transformer"
version = "0.1.0"
description = "Explanation consistency of DistilBERT sentiment analysis under text augmentation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "transformers>=4.40",
  "datasets>=2.18",
  "captum>=0.7",
  "scikit-learn>=1.3",
  "numpy>=1.24",
  "pandas>=2.0",
  "tqdm>=4.66",
  "pyyaml>=6.0",
  "mlflow>=2.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.4",
  "black>=24.4",
  "mypy>=1.8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
